--- a/manuscripts/thesis/index.Rmd
+++ b/manuscripts/thesis/index.Rmd
@@ -53,6 +53,19 @@ library(targets)
 # them as pngs in the targets pipeline, then simply call the pngs in the
 # in the code chunks instead of plotting the ggplots.
 library(patchwork)
+library(ragg)
+
+knitr::opts_chunk$set(
+  echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  fig.retina = 0.8, # figures are either vectors or 300 dpi diagrams
+  dpi = 300,
+  fig.width = 6,
+  fig.asp = 0.618, # 1 / phi
+  fig.show = "hold",
+  cache.extra = knitr::rand_seed
+)
 ```
 
 ```{r introduction}
