drop participant_pair random effect to fix convergenc warnings (mainly in submodels)

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -353,7 +353,9 @@ We collected the RV coefficient estimates into a similarity matrix, and then vis
 
 <!-- Constant dispersion (phi) was used for the model; this doesn't need to be mentioned explicitly, but it's worth leaving a reminder here as a comment. -->
 
-We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes, we included a random intercept for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common. We also included a random intercept for the participant pair to account for the repeated observation of the same participant pairs. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
+We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes, we included a random intercept for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
+
+We also originally planned to include a random intercept for the participant pair to account for the repeated observation of the same participant pairs, however including this term led to convergence problems for several of our models where the estimate for the variance of this parameter was zero. Although in principle participant pair should have been included in the statistical model as a random intercept to account for the repeated measures design, in practice its effect was negligible (estimates were similar or equivalent between models where it was and was not included). So we decided not to include this parameter for pragmatic reasons.
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; we were not particularly concerned with deviations from normality here, as generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007]; we considered Variance Inflation Factors less than five as indicators of low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
