Revise and move some content from the methods to the intro

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -70,13 +70,11 @@ The purpose of this three step process was as follows: Filtering the data into f
 
 ### Functional Connectivity
 
-Oscillation-based functional connectivity was estimated between all pairs of EEG channels within each recording for all five frequency bands using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which are measures of phase and amplitude coupling, respectively. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Specifically, phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales, and amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales [@engeletal_IntrinsicCouplingModes_2013].
-
-Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction in the head---which can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009]--reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into ten symmetrical $64 \times 64$ matrices called *functional connectomes* (one functional connectome for each frequency band and measure), which reflected electrophysiological cortical functional networks derived from averaged oscillatory coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
+Functional connectivity was estimated between all pairs of EEG channels in each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which measure phase and amplitude coupling, respectively. Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction in the head, reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into ten symmetrical $64 \times 64$ matrices called *functional connectomes* (one functional connectome for each frequency band and measure), which reflected electrophysiological cortical functional networks derived from averaged oscillatory coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
 
 #### Phase coupling
 
-The average amount of phase coupling between pairs of sensors was estimated within each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007]. The phase lag index estimates the asymmetry of the distribution of phase angle differences between two signals $x$ and $y$ [@stametal_PhaseLagIndex_2007; @vincketal_ImprovedIndexPhasesynchronization_2011], given by:
+The average amount of phase coupling between pairs of sensors was estimated in each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007]. The phase lag index estimates the asymmetry of the distribution of phase angle differences between two signals $x$ and $y$ [@stametal_PhaseLagIndex_2007; @vincketal_ImprovedIndexPhasesynchronization_2011], given by:
 
 $$
 \mathrm{PLI}(x, y) = 
@@ -128,7 +126,7 @@ where $\operatorname{sign}(\cdot)$ is the signum operator, $\operatorname{Im}(\c
 
 <!-- I have manually checked the internals and output of the `mne.connectivity.envelope_correlation()` function and it works exactly as described below. Using Michael Cohen's terminology, it estimates connectivity over time, which is appropriate for resting state data. -->
 
-The average amount of amplitude coupling between pairs of sensors was estimated within each recording using the amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012]. The amplitude envelope correlation estimates the absolute Pearson correlation coefficient of the amplitude envelopes between two orthogonalized complex-valued analytic signals $x$ and $y$ [@brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012; @hippetal_LargescaleCorticalCorrelation_2012], given by:
+The average amount of amplitude coupling between pairs of sensors was estimated in each recording using the amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012]. The amplitude envelope correlation estimates the absolute Pearson correlation coefficient of the amplitude envelopes between two orthogonalized complex-valued analytic signals $x$ and $y$ [@brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012; @hippetal_LargescaleCorticalCorrelation_2012], given by:
 
 $$
 \mathrm{AEC}(x, y) =
